<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#DCDCDC" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="#DEB887"
            android:gravity="center"
            android:text="@string/grade"
            android:textColor="#000000"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv1"
            android:background="#808080" />

        <Button
            android:id="@+id/bt0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2"
            android:layout_marginLeft="4dp"
            android:text="@string/bt0" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt0"
            android:layout_marginLeft="4dp"
            android:text="@string/bt1" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt1"
            android:layout_marginLeft="4dp"
            android:text="@string/bt2" />

        <Button
            android:id="@+id/bt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt2"
            android:layout_marginLeft="4dp"
            android:text="@string/bt3" />

        <Button
            android:id="@+id/bt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt3"
            android:layout_marginLeft="4dp"
            android:text="@string/bt4" />

        <Button
            android:id="@+id/bt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt4"
            android:layout_marginLeft="4dp"
            android:text="@string/bt5" />

        <Button
            android:id="@+id/bt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt5"
            android:layout_marginLeft="4dp"
            android:text="@string/bt6" />

        <Button
            android:id="@+id/bt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt6"
            android:layout_marginLeft="4dp"
            android:text="@string/bt7" />

        <Button
            android:id="@+id/bt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt7"
            android:layout_marginLeft="4dp"
            android:text="@string/bt8" />

        <WebView
            android:id="@+id/response"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/tv2" />
    </RelativeLayout>

</ScrollView>